--- a/main.css
+++ b/main.css
@@ -1,9 +1,20 @@
 *{ outline:1px solid rgba(255,0,0,0.5);}
+.menu{
+	background: #84B4B4 ;
+	color: white;
+	height: 120px;
+	width: 100%; 
+	left: 0; 
+	top: 0; 
+	position: fixed;
+	z-index: 10;
+}
 
 .home{
 	background-color: #84B4B4;
 }
 .portada{
+	margin-top: 100px;
 	background-image: url("img/arcoiris.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -12,7 +23,7 @@
 .medio{
 	font-family: 'Marcellus SC', serif;
 	position: relative;
-	top: 50px;
+	top: 100px;
 	text-align: center;
 	font-size: 50px;
 	color: black;
@@ -74,6 +85,19 @@
 .presen{
 	font-size: 20px;
 	color: #D57B59;
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+.rosa{
+	color: #D57B59;
+
+}
+.trabajos{
+	font-size: 20px;
+	color: black;
+	margin-top: 20px;
+	margin-bottom: 30px;
+
 }
 .blanco{
 	color: white;
@@ -108,14 +132,24 @@
 -ms-transform: scale(0.8);
 transform: scale(0.8);
 }
+.trabajos{
+	color: white;
+}
 
 #conocimientos{
 
 	font-size: 20px;
 	background-color: #D8D3C0;
-	padding: 30px 40px;
+	padding: 80px 40px;
+
 	
 
+}
+.learn{
+	font-size: 20px;
+	color: #D57B59;
+	margin-top: 50px;
+	margin-bottom: 30px;
 }
 .habilidades{
 	list-style: none;
@@ -143,8 +177,8 @@ transform: scale(0.8);
 }
 .segundo{
 	width: 130px;
-	height: 150px;
-	margin-top: 15px;
+	height: 170px;
+	margin-top: 35px;
 }
 .segundo:hover
 {
@@ -187,3 +221,83 @@ transform: scale(1.3);
 	margin-top: 50px;
 
 }
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: ##84B4B4;
+}
+
+/* Float the list items side by side */
+ul.topnav li {float: left;}
+
+/* Style the links inside the list items */
+ul.topnav li a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 0px 0px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of links on hover */
+ul.topnav li a:hover {background-color: #555;}
+
+/* Hide the list item that contains the link that should open and close the topnav on small screens */
+ul.topnav li.icon {display: none;}
+@media screen and (max-width:750px) {
+  ul.topnav li:not(:first-child) {display: none;}
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens */
+@media screen and (max-width:750px) {
+  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  ul.topnav.responsive li {
+    float: none;
+    display: inline;
+  }
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: left;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+...............
+
+
+@media(max-width: 750px){
+	header{height: 100vh;} 
+.work{
+margin-left: -50px;
+}
+
+
+
+
