--- a/main.css
+++ b/main.css
@@ -171,13 +171,16 @@ transform: scale(0.8);
 	
 	list-style: none;
 }
+.name{
+	width: 3%;
+}
 .primero{
 	width: 300px;
 	height: 270px;
 
 }
 .segundo{
-	width: 130px;
+	width: 170px;
 	height: 170px;
 	margin-top: 35px;
 }
@@ -188,7 +191,7 @@ transform: scale(0.8);
 transform: scale(1.3);
 }
 .mujer{
-	width: 200px;
+	width: 300px;
 	margin: 30px 0px;
 	text-align: center;
 
