--- a/main.css
+++ b/main.css
@@ -15,12 +15,14 @@
 }
 .portada{
 	margin-top: 100px;
-	background-image: url("img/arcoiris.jpg");
+	background-image: url("img/turqueza.jpg");
+	/*background-image: url("img/arcoiris.jpg");*/
 	background-repeat: no-repeat;
 	background-size: cover;
 }	
 .medio{
-	font-family: 'Marcellus SC', serif;
+
+	font-family: 'Permanent Marker', cursive;
 	position: relative;
 	top: 100px;
 	text-align: center;
@@ -51,7 +53,8 @@
 	margin-left: 15px;
 }
 .titulo{
-	color: 	#D57B59;
+	/*color: 	#D57B59;*/
+	color: #CC6633;
 	margin: 0px;
 	border-right-style: double;
 	border-right-width: 10px;
@@ -82,6 +85,8 @@
 	color: #D57B59;
 	margin-top: 20px;
 	margin-bottom: 30px;
+	/*font-family: 'Indie Flower', cursive;*/
+	font-family: 'Pacifico', cursive;
 }
 .rosa{
 	color: #D57B59;
@@ -102,7 +107,10 @@
 }
 #proyectos{ 
 	font-size: 20px;
-	background-color: #D57B59;
+	/*background-color: #D57B59;*/
+	background-image: url("img/rosa.jpg");
+
+	background-color: #CC6633;
 	padding: 35px 30px;
 }
 .misproyect{
@@ -144,16 +152,17 @@ transform: scale(0.8);
 #contacto{
 
 	font-size: 20px;
-	background-color: 	#3D3D3D;
-	padding: 40px 40px;
+	background-image: url("img/gris.jpg");
+	padding: 10px 40px;
 }
 .contact{
 	margin: 30px 0px;	
 	list-style: none;
 }
 .primero{
+	height: 300px;
 	width: 300px;
-	height: 270px;
+	
 }
 .segundo{
 	width: 170px;
@@ -183,7 +192,7 @@ transform: scale(1.3);
 .borde{
 	height: 150px;
 	width: 150px;
-	background-color: #D57B59;
+	background-color: #CC6633;
 	border:1px solid #D57B59; 
 	border-radius: 50%;
 	display: inline-block;
@@ -203,7 +212,7 @@ ul.topnav {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: ###84B4B4;
+    background-color: #84B4B4;
 }
 .center{
 	text-align: center;
